[tool.poetry]
name = "mpmc"
version = "0.1.3"
description = ""
authors = ["fdv1 <francois@pytek.io>"]
readme = "README.md"
packages = [{include = "mpmc"}]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.2"
typed-ast = "^1.5.4"
pytest-asyncio = "^0.21.0"